kubernetes/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fib-calc-api-deployment
  namespace: fib-calc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fib-calc
      fib-calc-component: api
  template:
    metadata:
      labels:
        app: fib-calc
        fib-calc-component: api
    spec:
      containers:
      - name: nginx
        image: gcr.io/sam-sandbox-243911/github.com/samweeks92/overly-complicated-fibonacci-calculator/server:1.0
        ports:
        - name: container-port
          containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: fib-calc
spec:
  selector:
    app: fib-calc
    fib-calc-component: api
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
