kubernetes/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fib-calc-client-deployment
  namespace: fib-calc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fib-calc
      fib-calc-component: client
  template:
    metadata:
      labels:
        app: fib-calc
        fib-calc-component: client
    spec:
      containers:
      - name: client
        image: gcr.io/sam-sandbox-243911/github.com/samweeks92/overly-complicated-fibonacci-calculator/client:1.0
        ports:
        - name: container-port
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: fib-calc
spec:
  selector:
    app: fib-calc
    fib-calc-component: client
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
