kubernetes/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fib-calc-nginx-deployment
  namespace: fib-calc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fib-calc
      fib-calc-component: nginx
  template:
    metadata:
      labels:
        app: fib-calc
        fib-calc-component: nginx
    spec:
      containers:
      - name: nginx
        image: gcr.io/sam-sandbox-243911/github.com/samweeks92/overly-complicated-fibonacci-calculator/nginx:1.0
        ports:
        - name: container-port
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: fib-calc
  #annotations:
  #  cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
spec:
  selector:
    app: fib-calc
    fib-calc-component: nginx
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
