kubernetes/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fib-calc-redis-deployment
  namespace: fib-calc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fib-calc
      fib-calc-component: redis
  template:
    metadata:
      labels:
        app: fib-calc
        fib-calc-component: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - name: container-port
          containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: fib-calc
spec:
  selector:
    app: fib-calc
    fib-calc-component: redis
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
