kubernetes/ingress-sg.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-sg
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "fib-ingress-ip-sg"
    #certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    #nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  # tls:
  #   - hosts:
  #       - k8s-multi.com
  #       - www.k8s-multi.com
  #     secretName: k8s-multi-com
  rules:
    - host: fib-calc-sg.samweeks.london
      http:
        paths:
          - path: /
            backend:
              serviceName: client
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: api
              servicePort: 5000
    - host: www.fib-calc-sg.samweeks.london
      http:
        paths:
          - path: /
            backend:
              serviceName: client
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: api
              servicePort: 5000
