kubernetes/ingress-sw.yaml
# apiVersion: networking.gke.io/v1beta2
# kind: ManagedCertificate
# metadata:
#   name: fib-calc-ingress
#   namespace: fib-calc
# spec:
#   domains:
#     #edit this to be the name of the domain that you have registered the static IP against
#     - fib-calc.samweeks.london
#---    
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fib-ingress
  namespace: fib-calc
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "fib-ingress-ip"
    #networking.gke.io/managed-certificates: fib-calc-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: client
          servicePort: 3000
      - path: /api/
        backend:
          serviceName: api
          servicePort: 5000
