kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: fib-calc
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: client
          servicePort: 5000
      - path: /api
        backend:
          serviceName: api
          servicePort: 5000
